--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+  <style type="text/css" src="src/index.css"></style>
 </head>
 
-<div id="root" class="noselect"></div>
+<div id="root" className="noselect">
+</div>
+
+<body>
+  <section class="rain"></section>
+
+
+</body>
 
 <script type="module" src="/src/main.jsx"></script>
 <script src="https://kit.fontawesome.com/88f94bc003.js" crossorigin="anonymous"></script>
-<span id="footer-copyright">
-  <span id="footer-copyright-text">
-    © 2024 Caleb Jones. All rights reserved.
-  </span>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="src/components/Rain/Rain.js"></script>
+
 
 </html>
