Background pathing fix

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script type="module" src="/src/main.jsx"></script>
 <script src="https://kit.fontawesome.com/88f94bc003.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="src/components/Rain/Rain.js"></script>
+<script src="./Rain/Rain.js"></script>
 
 
 </html>
